NewsApi.java - Removed UrlException throw Added NewsErrorAlert, Altered exceptions to show Alert AppController code optimization